--- a/content/pages/rules/authentication/225/index.adoc
+++ b/content/pages/rules/authentication/225/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/225/
 :category: authentication
 :description: This requirement establishes the importance of securely configuring the system responses to authentication failures.
-:keywords: Requirement, Security, Authentication, Failure, Response, Information, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Authentication, Failure, Response, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R225. Proper authentication responses
@@ -11,13 +11,35 @@
 System responses to authentication failures
 must not indicate which part of the authentication was incorrect.
 
+== Description
+
+Authentication forms are one of the most publicly accessible parts of an
+application,
+which makes them more susceptible to be attacked.
+Most authentication mechanisms require only a username and a password.
+If the responses to authentication attempts indicate which authentication
+parameter was incorrect,
+attackers may be able to obtain a list of valid usernames (user enumeration)
+that they can use in brute force attacks.
+
 == Findings
 
 * [inner]#link:/web/findings/026/[F026. User enumeration]#
 
 == References
 
-. [[r1]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/203.html[CWE-203: Observable Discrepancy].
+The product behaves differently or sends different responses under different
+circumstances in a way that is observable to an unauthorized actor,
+which exposes security-relevant information about the state of the product,
+such as whether a particular operation was successful or not.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/204.html[CWE-204: Observable Response Discrepancy].
+The product provides different responses to incoming requests in a way that
+reveals internal state information to an unauthorized actor outside of the
+intended control sphere.
+
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
