--- a/new/content/pages/products/forces/index.adoc
+++ b/new/content/pages/products/forces/index.adoc
@@ -10,9 +10,9 @@
 
 [role="fw1 f-key-features lh-key-features"]
 Through Forces, you can interrupt your deployment processes
-—aka break the build— when the vulnerabilities found and confirmed
+— aka break the build — in cases where the detected vulnerabilities
 (without false positives) that you do not accept in your systems
-are still open, that is, they have not yet been remediated.
+are still open, in other words, have not yet been remediated.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == Easy Integration With Any CI System
@@ -21,13 +21,13 @@ are still open, that is, they have not yet been remediated.
 Forces can be easily incorporated into any
 Continuous Integration/Continuous Deployment (CI/CD) system
 to act as a security gate, allowing everything that goes into production
-to be free of the vulnerabilities you decided to remediate.
+to be free of the vulnerabilities you decide to remediate.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == SAST, DAST and DXST
 
 [role="fw1 f-key-features lh-key-features"]
 Forces can perform Dynamic and Static Application Security Testing
-(DAST - SAST) as well as dynamic testing of many protocols (DXST)
+(DAST - SAST), as well as dynamic testing of many protocols (DXST),
 directly in your CI environment,
 all this without increasing the integration times in your systems.
